# amber

./: .gitignore  .travis.yml  AUTHORS.md  CITATION.cff  CMakeLists.txt  LICENSE.md  README.md  codecov.yml  environment-nomkl.yml  environment.yml  pyproject.toml  pytest.ini
.github/workflows/: cmake.yml  codeql-analysis.yml  codeql.yml  python-package-conda.yml  python-package-pip.yml  python-package.yml  python-test.yml  test.yml
amber/: __init__.py  bernstein.py
amber-tests/: __init__.py  benchmarking.ipynb  benchmarks.ipynb  test_bernstein.py
assets/css/: style.scss
assets/mathematica/: Bernstein.ipynb
assets/src/main/cmake/: unix.cmake
assets/src/main/mathematica/: Bernstein.ipynb  Bernstein.nb
assets/src/test/fortran/: test_mod.F90
etc/main/cmake/: fortran.cmake
etc/main/fortran/: bernstein_mod.F90
etc/test/fortran/: nnls_mod_test.F90
src/main/cmake/: openmp.cmake  test.cmake  veclib.cmake
src/main/fortran/: base_mod.F90  bernstein_mod.F90  nnls_mod.F90
src/test/fortran/: bernstein_mod_test.F90  nnls_mod_test.F90  test_mod.F90
