[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amber"
dynamic = ["version"]
dependencies = [
    "numpy",
    "scipy",
    "tensorflow>=2.12.0",
]
requires-python = ">=3.11"
authors = [
    { name = "Ralf Quast", email = "octoflar@icloud.com" },
]
description = "Amber provides code to evaluate multivariate Bernstein polynomials in TensorFlow"
readme = "README.md"
license = { text = "MIT License" }
keywords = [
    "Bernstein polynomials",
    "multivariate regression"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Private :: No Upload",
]

[project.optional-dependencies]
extra = [
    "jupyterlab",
    "numba",
    "tensorflow-probability",
]
test = [
    "pytest",
    "pytest-cov",
]
lint = [
    "black",
    "black[jupyter]",
    "flake8",
]

[project.urls]
Homepage = "https://octoflar.github.io/amber/"
Repository = "https://github.com/octoflar/amber"

[project.scripts]
# none

[tool.black]
line-length = 80
target-version = ["py311"]

[tool.coverage.report]
exclude_also = [
    "@tf.function",
]

[tool.flake8]
max-line-length = 80

[tool.pytest.ini_options]
addopts = "--cov=amber"
pythonpath = "amber"
testpaths = [
    "amber-tests",
]

[tool.setuptools]
packages = ["amber"]

[tool.setuptools.dynamic]
version = { attr = "amber.__version__" }
